Fixed Cards alignment
- Fixed the cards not scaling properly with the page
- Aligned each of them to the top

--- a/assets/css/customstyle.css
+++ b/assets/css/customstyle.css
@@ -101,9 +101,6 @@ a > i:hover {
 }
 
 /* About us cards */
-#cards .card-container {
-  align-self: flex-start !important;
-}
 
 /*? Footer */
 #discord-widget {
